divs are aligning correct with resizing

--- a/style.css
+++ b/style.css
@@ -51,17 +51,32 @@
 }
 
 @media screen and (max-width: 1100px) {
-
+  #middle{
+    flex-wrap: wrap;
+  }
   #nav {
-      width: 100%;
+    width: 100%;
+  }
+  #main{
+    width: 100%;
+    flex-wrap: wrap;
+    }
+  #articles{
+    width: 50%;
+  }
+  #ads{
+    width: 50%;
   }
 
 }
 
 @media screen and (max-width: 700px) {
 
-  #nav {
-      width: 100%;
+  #articles{
+    width: 100%;
+  }
+  #ads{
+    width: 100%;
   }
 
 }
